# qt_common

./: .gitignore  .vimrc  CMakeLists.txt  Jenkinsfile  Jenkinsfile.conan  README.md  build.py  conanfile.py  config-pmi_qt_common.h.cmake  git_versions_record.bat  git_versions_record.txt  pmi.ini.template
cache_file_creator/: CMakeLists.txt  main.cpp
common_core_mini/: CMakeLists.txt  pmi_common_core_miniConfig.cmake.in
common_core_mini/resources/: averagine_normalized.csv  common_core_mini.qrc
common_core_mini/src/: AdvancedSettings.cpp  AdvancedSettings.h  CustomSettings.cpp  CustomSettings.h  CustomSettingsBase.cpp  CustomSettingsBase.h  Global.h  PMiTestUtils.h  PmiQtCommonConstants.cpp  PmiQtCommonConstants.h  WorkflowLogs.h  pmi_common_core_mini_debug.cpp  pmi_common_core_mini_debug.h
common_core_mini/tests/: CMakeLists.txt
common_tiles/: CMakeLists.txt  pmi_common_tilesConfig.cmake.in
common_tiles/src/: CheckerDataProvider.cpp  CheckerDataProvider.h  ImagePatternTileIterator.cpp  ImagePatternTileIterator.h  ImageTileIterator.cpp  ImageTileIterator.h  MzScanIndexNonUniformTileRectIterator.cpp  MzScanIndexNonUniformTileRectIterator.h  MzScanIndexRect.h  NonUniformTile.cpp  NonUniformTile.h  NonUniformTileBase.h  NonUniformTileDevice.cpp  NonUniformTileDevice.h  NonUniformTileIntensityIndex.cpp  NonUniformTileIntensityIndex.h  NonUniformTileManager.cpp  NonUniformTileManager.h  NonUniformTileMaxIntensityFinder.cpp  NonUniformTileMaxIntensityFinder.h  NonUniformTilePartIterator.cpp  NonUniformTilePartIterator.h  NonUniformTilePoint.cpp  NonUniformTilePoint.h  NonUniformTileRange.cpp  NonUniformTileRange.h  NonUniformTileStore.cpp  NonUniformTileStore.h  NonUniformTileStoreBase.h  NonUniformTileStoreMemory.cpp  NonUniformTileStoreMemory.h  NonUniformTileStoreSqlite.cpp  NonUniformTileStoreSqlite.h  RandomBilinearTileIterator.cpp  RandomBilinearTileIterator.h  RandomNonUniformTileIterator.cpp  RandomNonUniformTileIterator.h  RandomTileIterator.cpp  RandomTileIterator.h  ScanIndexInterval.h  (+26 more)
common_tiles/tests/: CMakeLists.txt
common_widgets/: CMakeLists.txt  MSChromatogramDialog.cpp  MSChromatogramDialog.h  MSReaderTableModel.cpp  MSReaderTableModel.h  MSReaderTableView.cpp  MSReaderTableView.h  MSReaderWidget.cpp  MSReaderWidget.h  MSXICDataDialog.cpp  MSXICDataDialog.h  pmi_common_widgetsConfig.cmake.in
modifications_ui/: CMakeLists.txt  pmi_modifications_uiConfig.cmake.in
modifications_ui/data/: unimod.xml
modifications_ui/pmi-glycansui/: CMakeLists.txt  GlycansUiMainWindow.cpp  GlycansUiMainWindow.h  app.rc  images.qrc  main.cpp
modifications_ui/pmi-modificationsui/: CMakeLists.txt  ModificationsUiMainWindow.cpp  ModificationsUiMainWindow.h  images.qrc  main.cpp
modifications_ui/src/: CinReader.cpp  CinReader.h  FineControl.cpp  FineControl.h  GlycanEditorDialog.cpp  GlycanEditorDialog.h  GlycanInfoItem.cpp  GlycanInfoItem.h  GlycanInfoModel.cpp  GlycanInfoModel.h  GlycansUiWidget.cpp  GlycansUiWidget.h  ModificationComboBox.cpp  ModificationComboBox.h  ModificationCommon.cpp  ModificationCommon.h  ModificationInfoItem.cpp  ModificationInfoItem.h  ModificationInfoModel.cpp  ModificationInfoModel.h  ModificationsUiWidget.cpp  ModificationsUiWidget.h  MultiselectComboBox.cpp  MultiselectComboBox.h  UnimodModifications.cpp  UnimodModifications.h  UnimodParser.cpp  UnimodParser.h  UnimodParserImplInterface.h  UnimodParserImplV2_0.cpp  UnimodParserImplV2_0.h  pmi_modifications_ui_debug.cpp  pmi_modifications_ui_debug.h
ms_convert_command_line/pmi-msconvert/: CMakeLists.txt  MSConvertCommandLineParser.cpp  MSConvertCommandLineParser.h  main.cpp
ms_convert_command_line/pmi-mstest/: CMakeLists.txt  MSCommandLineReader.cpp  MSCommandLineReader.h  MSTestCommandLineParser.cpp  MSTestCommandLineParser.h  main.cpp
ms_reader_app/: CMakeLists.txt  MSReaderMainWindow.cpp  MSReaderMainWindow.h  main.cpp
src/: Byspec2Types.h  CMakeLists.txt  CacheFileCreatorThread.cpp  CacheFileCreatorThread.h  CollateChargeClustersToFeatures.cpp  CollateChargeClustersToFeatures.h  CrossSampleFeatureCollatorTurbo.cpp  CrossSampleFeatureCollatorTurbo.h  FileMatrixDataStructure.cpp  FileMatrixDataStructure.h  MS1PrefixSum.cpp  MS1PrefixSum.h  MSReader.cpp  MSReader.h  MSReaderBase.cpp  MSReaderBase.h  MSReaderInfo.cpp  MSReaderInfo.h  MSReaderInterface.h  MSReaderOptions.cpp  MSReaderOptions.h  MSReaderTypes.cpp  MSReaderTypes.h  MSWriterByspec2.cpp  MSWriterByspec2.h  ProgressBarInterface.h  ProgressContext.h  ScanIterator.cpp  ScanIterator.h  VendorPathChecker.cpp  VendorPathChecker.h  pmi_common_msConfig.cmake.in  pmi_common_ms_debug.cpp  pmi_common_ms_debug.h
src/algo/: MSCentroidCache.cpp  MSCentroidCache.h  MSCentroidCacheManager.cpp  MSCentroidCacheManager.h  MSMultiSampleTimeWarp.cpp  MSMultiSampleTimeWarp.h  MSMultiSampleTimeWarp2D.cpp  MSMultiSampleTimeWarp2D.h  MzCalibration.cpp  MzCalibration.h  TimeWarp2D.cpp  TimeWarp2D.h  WarpCore2D.cpp  WarpCore2D.h  WarpElement.cpp  WarpElement.h
src/pico/: Centroid.cpp  Centroid.h  CompressionInfo.h  CompressionInfoHolder.h  Dirent.h  FunctionInfoMetaDataPrinter.cpp  FunctionInfoMetaDataPrinter.h  MsCompressGitVersionAuto.h  PicoCommon.h  PicoLocalCompress.cpp  PicoLocalCompress.h  PicoLocalDecompress.cpp  PicoLocalDecompress.h  PicoLocalDecompressQtUse.cpp  PicoLocalDecompressQtUse.h  PicoUtil.cpp  PicoUtil.h  Predictor.cpp  Predictor.h  Reader.cpp  Reader.h  Sqlite.cpp  Sqlite.h  WatersCalibration.cpp  WatersCalibration.h  WatersMetaReading.cpp  WatersMetaReading.h
src/tiles/: CachedMSReader.cpp  CachedMSReader.h  MSDataIterator.cpp  MSDataIterator.h  MSDataNonUniform.cpp  MSDataNonUniform.h  MSDataNonUniformAdapter.cpp  MSDataNonUniformAdapter.h  MSDataNonUniformGenerator.cpp  MSDataNonUniformGenerator.h  NonUniformTileBuilder.cpp  NonUniformTileBuilder.h  ResamplingIterator.cpp  ResamplingIterator.h  ScanDataTiledIterator.cpp  ScanDataTiledIterator.h  ScanIndexNumberConverter.cpp  ScanIndexNumberConverter.h  ScanIndexTimeConverter.cpp  ScanIndexTimeConverter.h  TileBuilder.cpp  TileBuilder.h  TileDocument.cpp  (+1 more)
(+570 files in other folders)
